# phytrade

./: .gitignore  CITATION.cff  CONTRIBUTING (1).md  CONTRIBUTING.md  LICENSE  PULL_REQUEST_TEMPLATE.md  README.md  __init__.py  engine.py  project.toml  pyproject.toml  run_simulation.py  test_physics.py
.GitHub/workflows/: publish.yml
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: SECURITY.md  bug_report.md  config.yml  feature_report.md
.github/workflows/: publish.yml
src/phytrade/: __init__.py  engine.py  mapper.py  registry.py  schema.py
src/phytrade/fluids/: __init__.py  engine.py
src/phytrade/logistics/: __init__.py  engine.py
src/phytrade/mechanical/: __init__.py  engine.py
src/phytrade/strategic/: __init__.py  engine.py
src/phytrade/thermo/: __init__.py  engine.py
