[build-system]
requires = ["setuptools>=61.0", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "phytrade"
version = "1.2.7"
description = "Institutional Physics Protocol for Global Commodity Arbitration (50 Domains)."
readme = "README.md"
requires-python = ">=3.8"
license = {text = "PhyTrade Proprietary Source-Available License v1.0"}

authors = [
    {name = "Kazi Saad Asif", email = "kazisaadasif29@gmail.com"}
]

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Financial and Insurance Industry",
    "Topic :: Scientific/Engineering :: Physics",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "License :: Other/Proprietary License",
]

dependencies = [
    "numpy>=1.20.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[project.urls]
Homepage = "https://github.com/ksaad20/phytrade"
