[build-system]
# Fixed: Added setuptools-scm to requirements to resolve build error
requires = ["setuptools>=64", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "phytrade"
dynamic = ["version"]
authors = [
    {name = "ksaad20", email = "your-email@example.com"},
]
description = "Institutional Physics-based Engine and Protocol for Global Commodity Arbitration"
readme = "README.md"
requires-python = ">=3.10"
keywords = ["maritime", "physics", "arbitration", "logistics", "trade"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Physics",
]

# Fixed: Updated license to simple string to remove DeprecationWarnings
license = "MIT"

dependencies = [
    "numpy>=1.24.0",
]

[project.urls]
Homepage = "https://github.com/ksaad20/phytrade"
Issues = "https://github.com/ksaad20/phytrade/issues"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools_scm]
# This enables automatic versioning based on your Git tags
