[build-system]
# This tells GitHub to install the tools needed to package your code
requires = ["setuptools>=64", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "phytrade"
dynamic = ["version"]
authors = [
    {name = "ksaad20"},
]
description = "Institutional Physics-based Engine and Protocol for Global Commodity Arbitration"
readme = "README.md"
requires-python = ">=3.10"

# FIX: This format allows custom license names without triggering the SPDX error
license = {text = "Proprietary"}

classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Physics",
]

dependencies = [
    "numpy>=1.24.0",
]

[project.urls]
Homepage = "https://github.com/ksaad20/phytrade"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools_scm]
# Enables automatic versioning from your git tags
